--- a/CSS/style.css
+++ b/CSS/style.css
@@ -34,6 +34,12 @@
 	padding: var(--padding-medium);
 	align-items: center;
 	border-radius: var(--border-radius-small);
+	transition: 0.1s;
+}
+
+.cta:hover {
+	transform: scale(1.01);
+
 }
 
 #search {
@@ -43,40 +49,59 @@
 form {
 	display: flex;
 	align-items: center;
-	gap: var(--gap-small);
 }
 
 #searchSubmit {
 	opacity: 0;
+	z-index: 1;
+}
+#searchInput {
+	color: var(--color-white-only);
 }
 
 form div {
 	position: relative;
-	width: 2rem;
-	height: 100%;
 	display: flex;
-	gap: var(--gap-medium);
-	margin: var(--margin-left-right-large);
 	border-radius: var(--border-radius-small);
 	align-items: center;
-	justify-content:center ;
-
+	justify-content: center;
 }
 
-form>div * {
+form > div i {
 	position: absolute;
 	padding: var(--padding-medium);
+	background-color: var(--color-black-2);
+	color: var(--color-white);
+	border-radius: var(--border-radius-small);
 }
 
 .primaryButton {
 	background-color: var(--color-red-1);
 	color: var(--color-white-only);
+	transition: 0.1s;
+}
+
+.primaryButton:hover,
+.circleActive:hover {
+	background-color: var(--color-red-2);
 }
 
 .secondaryButton {
 	border: 1px solid var(--color-white);
 	color: var(--color-white);
+	transition: 0.1s;
 }
+
+.secondaryButton:hover,
+.circle:not(.circleActive):hover {
+	background-color: var(--color-black-2);
+}
+
+.circle:not(.circleActive):hover {
+	transition: 0.1s;
+	background-color: var(--color-gray-1);
+}
+
 /* Main */
 main {
 	width: 100%;
@@ -134,7 +159,7 @@ main {
 	gap: var(--gap-medium);
 }
 
-#zf .PokemonInfos .sectionInformations .sectionType div {
+#zf .PokemonInfos .sectionInformations .sectionType > div {
 	display: flex;
 	gap: var(--gap-medium);
 }
@@ -217,6 +242,11 @@ main {
 	align-items: center;
 }
 
+#pokemonPromoted #gridPokemon article:hover {
+	transition: 0.1s;
+	transform: scale(1.01);
+}
+
 #pokemonPromoted #gridPokemon img {
 	max-width: 100%;
 	max-height: 100%;
@@ -245,6 +275,7 @@ main {
 }
 
 #pokemonPromoted #gridPokemon article > div .cta {
+	margin-top: var(--margin-small);
 	align-self: flex-end;
 }
 
@@ -291,6 +322,11 @@ main {
 	gap: var(--gap-small);
 	padding: var(--padding-small);
 	border-radius: var(--border-radius-big);
+}
+
+.typePokemon img {
+	width: 100%;
+	height: auto;
 }
 
 /* Type Pokemon Colors */
@@ -384,10 +420,27 @@ main {
 	background-color: var(--color-gray);
 	padding: var(--padding-small);
 	border-radius: 50%;
+	width: auto;
+	height: 2rem;
 }
 
-.circle img {
+.typePokemon {
+	display: flex;
+	align-items: center;
+}
+
+.typePokemon div {
+	height: 1.5rem;
 	width: 1.5rem;
+	display: flex;
+	align-items: center;
+}
+
+.typePokemon img,
+.circle img {
+	width: auto;
+	height: 100%;
+	object-fit: contain;
 }
 
 .circleActive {
@@ -398,6 +451,12 @@ main {
 @media (max-width: 1440px) {
 	.container {
 		width: 1140px;
+	}
+
+	#pokemonPromoted #gridPokemon {
+		grid-template-columns: 1fr 1fr;
+		grid-template-rows: auto;
+		gap: var(--gap-medium);
 	}
 }
 
@@ -419,12 +478,10 @@ main {
 	#zf .PokemonInfos .sectionInformations .sectionType {
 		grid-column: 1/3;
 	}
-
-	#pokemonPromoted #gridPokemon {
-		grid-template-columns: 1fr 1fr;
-		grid-template-rows: auto;
-		gap: var(--gap-medium);
+	#zf .PokemonInfos .sectionCardNav {
+		flex-wrap: wrap;
 	}
+
 	#footerPage #primaryContent {
 		grid-template-columns: 1fr;
 		grid-template-rows: 1fr auto auto;
@@ -460,6 +517,10 @@ main {
 		grid-column: 1/1;
 	}
 
+	#pokemonPromoted #gridPokemon img {
+		max-width: 60%;
+	}
+
 	#pokemonPromoted header {
 		align-items: center;
 		text-align: center;
@@ -481,7 +542,7 @@ main {
 
 	#pokemonPromoted #gridPokemon article {
 		grid-template-columns: 1fr;
-		grid-template-rows: 1fr 1fr;
+		grid-template-rows: 1fr auto;
 	}
 
 	#pokemonPromoted #gridPokemon article figure {
@@ -495,8 +556,13 @@ main {
 		padding: 0;
 	}
 
+	#pokemonPromoted #gridPokemon article .flexTypes {
+		display: grid;
+		grid-template-columns: min-content min-content;
+	}
+
 	#pokemonPromoted #gridPokemon article > div .cta {
-		align-self: stretch;
+		grid-column: 1/3;
 	}
 
 	#footerPage {
@@ -544,15 +610,13 @@ main {
 /* Media 520px smartphone */
 @media (max-width: 520px) {
 	#zf {
-		grid-template-rows: 1fr 2fr;
+		grid-template-rows: 1fr auto;
 	}
 	#zf .PokemonInfos .sectionsStatistiques .statistiques {
 		display: flex;
 		flex-direction: column;
 	}
-	#zf .PokemonInfos .sectionCardNav {
-		flex-wrap: wrap;
-	}
+
 	#zf .PokemonInfos .sectionCardNav .cta {
 		width: 100%;
 	}
