--- a/CSS/style.css
+++ b/CSS/style.css
@@ -46,21 +46,18 @@
 }
 
 /* Form Search */
-#search {
-	background-color: var(--color-black-1);
-}
-
 form {
 	display: flex;
 	align-items: center;
 }
 
+#search {
+	background-color: var(--color-black-1);
+}
+
 #searchSubmit {
 	opacity: 0;
 	z-index: 1;
-}
-#searchInput {
-	color: var(--color-white-only);
 }
 
 form div {
@@ -82,18 +79,15 @@ form > div i {
 .primaryButton {
 	background-color: var(--color-red-1);
 	color: var(--color-white-only);
-	transition: transform 0.1s ease-in-out;
 }
 
-.primaryButton:hover,
-.circleActive:hover {
+.primaryButton:hover {
 	background-color: var(--color-red-2);
 }
 
 .secondaryButton {
 	border: 1px solid var(--color-white);
 	color: var(--color-white);
-	transition: transform 0.1s ease-in-out;
 }
 
 /* Team Pokemon */
@@ -128,7 +122,7 @@ main {
 	overflow: hidden;
 }
 
-#zf .PokemonInfos {
+#zf #PokemonZf {
 	min-width: 40rem;
 	background-color: var(--color-black);
 	padding: var(--padding-large);
@@ -136,82 +130,43 @@ main {
 	z-index: 1;
 }
 
-#zf .PokemonInfos .sectionCardNav {
+#zf #PokemonZf > * {
+	display: flex;
 	padding: var(--padding-top-bottom-large);
-	display: flex;
-	justify-content: space-between;
 	gap: var(--gap-medium);
 }
 
-#zf .PokemonInfos .sectionCardNav div {
-	padding-top: var(--padding-medium);
+#zf #PokemonZf > .navCard,
+#zf #PokemonZf > .infos {
 	display: flex;
-	gap: var(--gap-medium);
-}
-
-/* Statistiques and Team */
-#zf .PokemonInfos .sectionInformations,
-.sectionDescription,
-.sectionsStatistiques {
-	border-top: var(--color-gray) solid 1px;
-	padding: var(--padding-top-bottom-medium);
-	display: flex;
+	width: 100%;
 	gap: var(--gap-large);
 }
 
-.PokemonInfos .sectionInformations > div,
-.sectionDescription,
-.sectionsStatistiques {
+#zf #PokemonZf > .navCard {
+	justify-content: space-between;
+}
+
+#zf #PokemonZf > .navCard > *,
+#zf #PokemonZf > .infos > * {
 	display: flex;
+	gap: var(--gap-medium);
+}
+
+#zf #PokemonZf > .infos > *,
+#zf #PokemonZf > .navCard > * {
 	flex-direction: column;
-	gap: var(--gap-medium);
 }
 
-.PokemonInfos .sectionInformations .sectionType > div {
+#zf #PokemonZf > .infos #typesPokemons {
 	display: flex;
 	gap: var(--gap-medium);
 }
 
-/* Zf box */
-.PokemonInfos .sectionsStatistiques .zones {
-	margin: var(--margin-top-bottom-medium);
-	padding: var(--padding-medium);
-	background-color: var(--color-black-1);
-	border-radius: var(--border-radius-small);
-}
 
-/* Zf stats */
-.PokemonInfos .sectionsStatistiques .statistiques div {
-	display: grid;
-	grid-template-columns: 1fr 1fr;
-	gap: var(--gap-small);
-	grid-template-rows: auto;
-}
+#zf #PokemonZf > .sections {
 
-.PokemonInfos .sectionsStatistiques .team div {
-	display: flex;
-	padding: var(--padding-top-bottom-medium);
-	align-items: center;
-	gap: var(--gap-medium);
 }
-
-.PokemonInfos .sectionsStatistiques .statistiques .secondaryText {
-	grid-column: 1/3;
-}
-
-/* Pokeball Circle */
-.circle {
-	background-color: var(--color-gray);
-	padding: var(--padding-small);
-	border-radius: 50%;
-	width: auto;
-	height: 2rem;
-}
-
-.circleActive {
-	background-color: var(--color-red-1);
-}
-
 
 /************** Types pokemons **************/
 .typePokemon {
@@ -221,10 +176,6 @@ main {
 	border-radius: var(--border-radius-big);
 	align-items: center;
 	color: var(--color-white-only);
-}
-
-#zf .PokemonInfos .sectionInformations #typesPokemons {
-	padding: var(--padding-medium);
 }
 
 .typePokemon img,
@@ -355,7 +306,7 @@ main {
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr;
 	grid-template-rows: 1fr;
-	gap: var(--gap-medium);
+	gap: var(--gap-large);
 }
 
 #evolution #gridPokemon {
@@ -420,19 +371,12 @@ main {
 #gridPokemon article > div {
 	display: flex;
 	flex-direction: column;
-	gap: var(--gap-small);
-	padding: var(--padding-medium);
-}
-
-#gridPokemon article > div {
-	display: flex;
-	flex-direction: column;
-	gap: var(--gap-small);
-	padding: var(--padding-medium);
+	gap: var(--gap-medium);
+	justify-content: space-between;
+	height: 100%;
 }
 
 #gridPokemon article > div .cta {
-	margin-top: var(--margin-small);
 	align-self: flex-end;
 }
 
@@ -457,6 +401,10 @@ main {
 	justify-content: space-between;
 }
 
+#footerPage li {
+	padding: var(--padding-small);
+}
+
 /************** Media **************/
 /* Media 1200px large screen */
 @media (max-width: 1440px) {
@@ -469,19 +417,20 @@ main {
 
 /* Media 1200px large screen */
 @media (max-width: 1200px) {
-	#zf .PokemonInfos {
+	#zf #PokemonZf {
 		min-width: 0;
 	}
-	#zf .PokemonInfos .sectionInformations {
+	#zf #PokemonZf .infos {
+		gap: var(--gap-medium);
 		display: grid;
-		grid-template-columns: 1fr 1fr;
+		grid-template-columns: auto 1fr;
 		grid-template-rows: 1fr;
 	}
 
-	#zf .PokemonInfos .sectionInformations .sectionType {
+	#zf #PokemonZf .infos .Type {
 		grid-column: 1/3;
 	}
-	#zf .PokemonInfos .sectionCardNav {
+	#zf #PokemonZf .navCard {
 		flex-wrap: wrap;
 	}
 
@@ -500,19 +449,20 @@ main {
 		width: 100%;
 		padding: 0;
 	}
-	#zf .PokemonInfos {
+	#zf #PokemonZf {
 		display: flex;
 		flex-direction: column;
 		order: 2;
 		border-radius: 1rem 1rem 0 0;
 	}
 
-	#zf .PokemonInfos .sectionInformations {
-		grid-template-columns: 1fr 1fr 1fr;
+	#zf #PokemonZf .infos {
+		gap: var(--gap-small);
+		grid-template-columns: 1fr 1fr;
 	}
 
-	#zf .PokemonInfos .sectionInformations .sectionType {
-		grid-column: 1/1;
+	#zf #PokemonZf .infos .sectionType {
+		grid-column: 1/3;
 	}
 
 	#pokemonPromoted #gridPokemon img {
@@ -572,7 +522,7 @@ main {
 		display: none;
 	}
 
-	.PokemonInfos .sectionsStatistiques .team div {
+	#PokemonZf .sectionsStatistiques .team div {
 		display: flex;
 		justify-content: center;
 	}
@@ -586,17 +536,16 @@ main {
 	#headerPage {
 		display: flex;
 		justify-content: center;
-
 	}
 	#pokemonPromoted #gridPokemon {
 		grid-template-columns: 1fr;
 	}
 
-	.PokemonInfos .sectionInformations {
+	#PokemonZf .infos {
 		grid-template-columns: 1fr 1fr;
 	}
 
-	.PokemonInfos .sectionInformations .sectionType {
+	#PokemonZf .infos .sectionType {
 		grid-column: 1 / 3;
 	}
 
@@ -611,12 +560,12 @@ main {
 	#zf {
 		grid-template-rows: 1fr auto;
 	}
-	.PokemonInfos .sectionsStatistiques .statistiques {
+	#PokemonZf .sectionsStatistiques .statistiques {
 		display: flex;
 		flex-direction: column;
 	}
 
-	.PokemonInfos .sectionCardNav .cta {
+	#PokemonZf .navCard .cta {
 		width: 100%;
 	}
 }
