--- a/CSS/style.css
+++ b/CSS/style.css
@@ -46,18 +46,21 @@
 }
 
 /* Form Search */
+#search {
+	background-color: var(--color-black-1);
+}
+
 form {
 	display: flex;
 	align-items: center;
 }
 
-#search {
-	background-color: var(--color-black-1);
-}
-
 #searchSubmit {
 	opacity: 0;
 	z-index: 1;
+}
+#searchInput {
+	color: var(--color-white-only);
 }
 
 form div {
@@ -79,15 +82,18 @@ form > div i {
 .primaryButton {
 	background-color: var(--color-red-1);
 	color: var(--color-white-only);
+	transition: transform 0.1s ease-in-out;
 }
 
-.primaryButton:hover {
+.primaryButton:hover,
+.circleActive:hover {
 	background-color: var(--color-red-2);
 }
 
 .secondaryButton {
 	border: 1px solid var(--color-white);
 	color: var(--color-white);
+	transition: transform 0.1s ease-in-out;
 }
 
 /* Team Pokemon */
@@ -122,7 +128,7 @@ main {
 	overflow: hidden;
 }
 
-#zf #PokemonZf {
+#zf .PokemonInfos {
 	min-width: 40rem;
 	background-color: var(--color-black);
 	padding: var(--padding-large);
@@ -130,43 +136,82 @@ main {
 	z-index: 1;
 }
 
-#zf #PokemonZf > * {
-	display: flex;
+#zf .PokemonInfos .sectionCardNav {
 	padding: var(--padding-top-bottom-large);
+	display: flex;
+	justify-content: space-between;
 	gap: var(--gap-medium);
 }
 
-#zf #PokemonZf > .navCard,
-#zf #PokemonZf > .infos {
+#zf .PokemonInfos .sectionCardNav div {
+	padding-top: var(--padding-medium);
 	display: flex;
-	width: 100%;
+	gap: var(--gap-medium);
+}
+
+/* Statistiques and Team */
+#zf .PokemonInfos .sectionInformations,
+.sectionDescription,
+.sectionsStatistiques {
+	border-top: var(--color-gray) solid 1px;
+	padding: var(--padding-top-bottom-medium);
+	display: flex;
 	gap: var(--gap-large);
 }
 
-#zf #PokemonZf > .navCard {
-	justify-content: space-between;
-}
-
-#zf #PokemonZf > .navCard > *,
-#zf #PokemonZf > .infos > * {
+.PokemonInfos .sectionInformations > div,
+.sectionDescription,
+.sectionsStatistiques {
 	display: flex;
-	gap: var(--gap-medium);
-}
-
-#zf #PokemonZf > .infos > *,
-#zf #PokemonZf > .navCard > * {
 	flex-direction: column;
+	gap: var(--gap-medium);
 }
 
-#zf #PokemonZf > .infos #typesPokemons {
+.PokemonInfos .sectionInformations .sectionType > div {
 	display: flex;
 	gap: var(--gap-medium);
 }
 
-
-#zf #PokemonZf > .sections {
-
+/* Zf box */
+.PokemonInfos .sectionsStatistiques .zones {
+	margin: var(--margin-top-bottom-medium);
+	padding: var(--padding-medium);
+	background-color: var(--color-black-1);
+	border-radius: var(--border-radius-small);
 }
+
+/* Zf stats */
+.PokemonInfos .sectionsStatistiques .statistiques div {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	gap: var(--gap-small);
+	grid-template-rows: auto;
+}
+
+.PokemonInfos .sectionsStatistiques .team div {
+	display: flex;
+	padding: var(--padding-top-bottom-medium);
+	align-items: center;
+	gap: var(--gap-medium);
+}
+
+.PokemonInfos .sectionsStatistiques .statistiques .secondaryText {
+	grid-column: 1/3;
+}
+
+/* Pokeball Circle */
+.circle {
+	background-color: var(--color-gray);
+	padding: var(--padding-small);
+	border-radius: 50%;
+	width: auto;
+	height: 2rem;
+}
+
+.circleActive {
+	background-color: var(--color-red-1);
+}
+
 
 /************** Types pokemons **************/
 .typePokemon {
@@ -176,6 +221,10 @@ main {
 	border-radius: var(--border-radius-big);
 	align-items: center;
 	color: var(--color-white-only);
+}
+
+#zf .PokemonInfos .sectionInformations #typesPokemons {
+	padding: var(--padding-medium);
 }
 
 .typePokemon img,
@@ -306,7 +355,7 @@ main {
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr;
 	grid-template-rows: 1fr;
-	gap: var(--gap-large);
+	gap: var(--gap-medium);
 }
 
 #evolution #gridPokemon {
@@ -371,12 +420,19 @@ main {
 #gridPokemon article > div {
 	display: flex;
 	flex-direction: column;
-	gap: var(--gap-medium);
-	justify-content: space-between;
-	height: 100%;
+	gap: var(--gap-small);
+	padding: var(--padding-medium);
+}
+
+#gridPokemon article > div {
+	display: flex;
+	flex-direction: column;
+	gap: var(--gap-small);
+	padding: var(--padding-medium);
 }
 
 #gridPokemon article > div .cta {
+	margin-top: var(--margin-small);
 	align-self: flex-end;
 }
 
@@ -401,10 +457,6 @@ main {
 	justify-content: space-between;
 }
 
-#footerPage li {
-	padding: var(--padding-small);
-}
-
 /************** Media **************/
 /* Media 1200px large screen */
 @media (max-width: 1440px) {
@@ -417,20 +469,19 @@ main {
 
 /* Media 1200px large screen */
 @media (max-width: 1200px) {
-	#zf #PokemonZf {
+	#zf .PokemonInfos {
 		min-width: 0;
 	}
-	#zf #PokemonZf .infos {
-		gap: var(--gap-medium);
+	#zf .PokemonInfos .sectionInformations {
 		display: grid;
-		grid-template-columns: auto 1fr;
+		grid-template-columns: 1fr 1fr;
 		grid-template-rows: 1fr;
 	}
 
-	#zf #PokemonZf .infos .Type {
+	#zf .PokemonInfos .sectionInformations .sectionType {
 		grid-column: 1/3;
 	}
-	#zf #PokemonZf .navCard {
+	#zf .PokemonInfos .sectionCardNav {
 		flex-wrap: wrap;
 	}
 
@@ -449,20 +500,19 @@ main {
 		width: 100%;
 		padding: 0;
 	}
-	#zf #PokemonZf {
+	#zf .PokemonInfos {
 		display: flex;
 		flex-direction: column;
 		order: 2;
 		border-radius: 1rem 1rem 0 0;
 	}
 
-	#zf #PokemonZf .infos {
-		gap: var(--gap-small);
-		grid-template-columns: 1fr 1fr;
+	#zf .PokemonInfos .sectionInformations {
+		grid-template-columns: 1fr 1fr 1fr;
 	}
 
-	#zf #PokemonZf .infos .sectionType {
-		grid-column: 1/3;
+	#zf .PokemonInfos .sectionInformations .sectionType {
+		grid-column: 1/1;
 	}
 
 	#pokemonPromoted #gridPokemon img {
@@ -522,7 +572,7 @@ main {
 		display: none;
 	}
 
-	#PokemonZf .sectionsStatistiques .team div {
+	.PokemonInfos .sectionsStatistiques .team div {
 		display: flex;
 		justify-content: center;
 	}
@@ -536,16 +586,17 @@ main {
 	#headerPage {
 		display: flex;
 		justify-content: center;
+
 	}
 	#pokemonPromoted #gridPokemon {
 		grid-template-columns: 1fr;
 	}
 
-	#PokemonZf .infos {
+	.PokemonInfos .sectionInformations {
 		grid-template-columns: 1fr 1fr;
 	}
 
-	#PokemonZf .infos .sectionType {
+	.PokemonInfos .sectionInformations .sectionType {
 		grid-column: 1 / 3;
 	}
 
@@ -560,12 +611,12 @@ main {
 	#zf {
 		grid-template-rows: 1fr auto;
 	}
-	#PokemonZf .sectionsStatistiques .statistiques {
+	.PokemonInfos .sectionsStatistiques .statistiques {
 		display: flex;
 		flex-direction: column;
 	}
 
-	#PokemonZf .navCard .cta {
+	.PokemonInfos .sectionCardNav .cta {
 		width: 100%;
 	}
 }
