--- a/CSS/light-mode.css
+++ b/CSS/light-mode.css
@@ -13,7 +13,7 @@
 	--color-white-only: #fafafa;
 
 	--color-gray: #494949;
-	--color-gray-1: #727272;
+	--color-gray-1: #afafaf;
 
 	--color-black: #fafafa;
 	--color-black-1: #eeedf4;
