--- a/CSS/style.css
+++ b/CSS/style.css
@@ -101,6 +101,16 @@ form > div i {
 	transition: transform 0.1s ease-in-out;
 }
 
+.disableButton {
+	border: 1px solid var(--color-gray);
+	color: var(--color-white-only);
+	background-color: var(--color-gray-1);
+}
+
+.disableButton:hover {
+	transform: none;
+}
+
 /* Team Pokemon */
 .secondaryButton:hover,
 .circle:not(.circleActive):hover {
@@ -124,6 +134,7 @@ main {
 
 /************** Zf **************/
 #zf {
+	position: relative;
 	display: grid;
 	grid-template-columns: 1fr 1fr;
 	gap: var(--gap-large);
@@ -140,6 +151,35 @@ main {
 	border-radius: var(--border-radius-medium);
 	z-index: 1;
 }
+
+/* Alert Message */
+#alertMessage {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    gap: var(--gap-small);
+    justify-content: center;
+    z-index: 20;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    transition: right 0.6s cubic-bezier(0.645, 0.045, 0.355, 1), opacity 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+    top: 0;
+    right: -30rem;
+	margin-left: var(--margin-large);
+    padding: 15px 20px;
+    border-radius: 10px;
+    opacity: 0;
+}
+
+#alertMessage.show {
+    right: 2rem;
+    opacity: 1;
+}
+
+#alertMessage.hide {
+    right: -30rem;
+    opacity: 0;
+}
+
 
 #zf .PokemonInfos .sectionCardNav {
 	padding: var(--padding-top-bottom-large);
@@ -178,7 +218,7 @@ main {
 }
 
 /* Zf box */
-.PokemonInfos .sectionsStatistiques .zones {
+.containerColor {
 	margin: var(--margin-top-bottom-medium);
 	padding: var(--padding-medium);
 	background-color: var(--color-black-1);
@@ -216,7 +256,6 @@ main {
 .circleActive {
 	background-color: var(--color-red-1);
 }
-
 
 /************** Types pokemons **************/
 .typePokemon {
@@ -342,6 +381,8 @@ main {
 
 /************** Section On bill **************/
 #pokemonPromoted {
+	position: relative;
+	overflow: hidden;
 	padding: var(--padding-top-bottom-large);
 }
 #pokemonPromoted header div {
@@ -462,54 +503,68 @@ main {
 	justify-content: space-between;
 }
 
-
 /* Loader Wrapper (animation de https://lazyjinchuriki.github.io/) */
 .loaderWrapper {
-    --curtain-color: var(--color-black);
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 1000;
+	display: flex;
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	z-index: 1000;
 }
 
 /* Rideaux */
 .loaderWrapper .loaderSection {
-    position: fixed;
-    top: 0;
-    background: var(--curtain-color);
-    width: 51%;
-    height: 100%;
-    z-index: 1000;
+	position: fixed;
+	top: 0;
+	background: var(--color-black);
+	width: 51%;
+	height: 100%;
+	z-index: 10;
 }
 
 .loaderWrapper .loaderSection.sectionLeft {
-    left: 0;
+	left: 0;
 }
 
 .loaderWrapper .loaderSection.sectionRight {
-    right: 0;
+	right: 0;
+}
+
+.loader {
+	align-self: center;
+	justify-self: center;
+	display: block;
+	position: relative;
+	width: 10rem;
+	height: 10rem;
+	margin: 0 auto;
+	animation: spin 2s linear infinite;
+	z-index: 11;
+}
+
+.loaded .loader {
+	opacity: 0;
+	transition: all 0.4s ease-out;
 }
 
 /* Animation de disparition */
 .loaded .loaderWrapper .loaderSection.sectionLeft {
-    transform: translateX(-100%);
-    transition: transform 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+	transform: translateX(-100%);
+	transition: transform 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
 }
 
 .loaded .loaderWrapper .loaderSection.sectionRight {
-    transform: translateX(100%);
-    transition: transform 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+	transform: translateX(100%);
+	transition: transform 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
 }
 
 .loaded .loaderWrapper {
-    visibility: hidden;
-    transform: translateY(-100%);
-    transition: transform 0.3s 1s ease-out, visibility 0s 1.3s;
+	visibility: hidden;
+	transform: translateY(-100%);
+	transition:
+		transform 0.3s 1s ease-out,
+		visibility 0s 1.3s;
 }
-
-
 
 /************** Media **************/
 /* Media 1200px large screen */
@@ -640,7 +695,6 @@ main {
 	#headerPage {
 		display: flex;
 		justify-content: center;
-
 	}
 	#pokemonPromoted #gridPokemon {
 		grid-template-columns: 1fr;
