--- a/CSS/style.css
+++ b/CSS/style.css
@@ -53,6 +53,7 @@
 /* Form Search */
 #search {
 	background-color: var(--color-black-1);
+	color: var(--color-white-only);
 }
 
 form {
@@ -64,9 +65,7 @@ form {
 	opacity: 0;
 	z-index: 1;
 }
-#searchInput {
-	color: var(--color-white-only);
-}
+
 
 form div {
 	position: relative;
@@ -154,32 +153,33 @@ main {
 
 /* Alert Message */
 #alertMessage {
-    position: absolute;
-    display: flex;
-    align-items: center;
-    gap: var(--gap-small);
-    justify-content: center;
-    z-index: 20;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-    transition: right 0.6s cubic-bezier(0.645, 0.045, 0.355, 1), opacity 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
-    top: 0;
-    right: -30rem;
+	position: absolute;
+	display: flex;
+	align-items: center;
+	gap: var(--gap-small);
+	justify-content: center;
+	z-index: 20;
+	box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+	transition:
+		right 0.6s cubic-bezier(0.645, 0.045, 0.355, 1),
+		opacity 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+	top: 0;
+	right: -30rem;
 	margin-left: var(--margin-large);
-    padding: 15px 20px;
-    border-radius: 10px;
-    opacity: 0;
+	padding: 15px 20px;
+	border-radius: 10px;
+	opacity: 0;
 }
 
 #alertMessage.show {
-    right: 2rem;
-    opacity: 1;
+	right: 2rem;
+	opacity: 1;
 }
 
 #alertMessage.hide {
-    right: -30rem;
-    opacity: 0;
+	right: -30rem;
+	opacity: 0;
 }
-
 
 #zf .PokemonInfos .sectionCardNav {
 	padding: var(--padding-top-bottom-large);
