--- a/CSS/style.css
+++ b/CSS/style.css
@@ -22,31 +22,8 @@
 	align-items: center;
 }
 
-/************** Buttons and Inputs **************/
-.cta,
-#search {
-	display: flex;
-	box-sizing: border-box;
-	justify-content: center;
-	gap: var(--gap-small);
-	padding: var(--padding-medium);
-	align-items: center;
-	border-radius: var(--border-radius-small);
-	transition: transform 0.1s ease-in-out;
-	cursor: pointer;
-}
-
-.cta:hover,
-#evolutionBtn,
-#aboutBtn,
-#searchSubmit,
-#darkLightMode {
-	transform: scale(1.02);
-	cursor: pointer;
-}
-
 #darkLightMode img {
-	width: 24px;
+	width: 1.5rem;
 	height: auto;
 }
 
@@ -66,7 +43,6 @@ form {
 	z-index: 1;
 }
 
-
 form div {
 	position: relative;
 	display: flex;
@@ -83,10 +59,31 @@ form > div i {
 	border-radius: var(--border-radius-small);
 }
 
+/************** Buttons and Inputs **************/
+.cta,
+#search {
+	display: flex;
+	box-sizing: border-box;
+	justify-content: center;
+	gap: var(--gap-small);
+	padding: var(--padding-medium);
+	align-items: center;
+	border-radius: var(--border-radius-small);
+	transition: transform 0.1s ease-in-out;
+	cursor: pointer;
+}
+
+.cta:hover,
+#evolutionBtn,
+#aboutBtn,
+input #darkLightMode {
+	transform: scale(1.02);
+	cursor: pointer;
+}
+
 .primaryButton {
 	background-color: var(--color-red-1);
 	color: var(--color-white-only);
-	transition: transform 0.1s ease-in-out;
 }
 
 .primaryButton:hover,
@@ -97,7 +94,6 @@ form > div i {
 .secondaryButton {
 	border: 1px solid var(--color-white);
 	color: var(--color-white);
-	transition: transform 0.1s ease-in-out;
 }
 
 .disableButton {
@@ -110,7 +106,7 @@ form > div i {
 	transform: none;
 }
 
-/* Team Pokemon */
+/* Team Pokémon */
 .secondaryButton:hover,
 .circle:not(.circleActive):hover {
 	background-color: var(--color-black-2);
@@ -121,17 +117,13 @@ form > div i {
 	background-color: var(--color-gray-1);
 }
 
-/************** Main **************/
-main {
-	width: 100%;
-}
-
-/* Variable Bg color */
+/************** Zf **************/
+/* Variables Bg color */
 .bgColor {
 	background-color: var(--dynamic-color);
 }
 
-/************** Zf **************/
+/* Zf sur toutes les pages */
 #zf {
 	position: relative;
 	display: grid;
@@ -143,46 +135,20 @@ main {
 	overflow: hidden;
 }
 
+#zf .PokemonName {
+	padding-bottom: var(--padding-small);
+}
+
 #zf .PokemonInfos {
-	min-width: 40rem;
 	background-color: var(--color-black);
 	padding: var(--padding-large);
 	border-radius: var(--border-radius-medium);
 	z-index: 1;
 }
 
-/* Alert Message */
-#alertMessage {
-	position: absolute;
-	display: flex;
-	align-items: center;
-	gap: var(--gap-small);
-	justify-content: center;
-	z-index: 20;
-	box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-	transition:
-		right 0.6s cubic-bezier(0.645, 0.045, 0.355, 1),
-		opacity 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
-	top: 0;
-	right: -30rem;
-	margin-left: var(--margin-large);
-	padding: 15px 20px;
-	border-radius: 10px;
-	opacity: 0;
-}
-
-#alertMessage.show {
-	right: 2rem;
-	opacity: 1;
-}
-
-#alertMessage.hide {
-	right: -30rem;
-	opacity: 0;
-}
-
 #zf .PokemonInfos .sectionCardNav {
-	padding: var(--padding-top-bottom-large);
+	align-items: center;
+	padding: var(--padding-top-bottom-medium);
 	display: flex;
 	justify-content: space-between;
 	gap: var(--gap-medium);
@@ -194,14 +160,15 @@ main {
 	gap: var(--gap-medium);
 }
 
-/* Statistiques and Team */
-#zf .PokemonInfos .sectionInformations,
+/* Statistiques et Équipe */
+#zf .sectionInformations,
 .sectionDescription,
 .sectionsStatistiques {
 	border-top: var(--color-gray) solid 1px;
 	padding: var(--padding-top-bottom-medium);
-	display: flex;
-	gap: var(--gap-large);
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	gap: var(--gap-medium);
 }
 
 .PokemonInfos .sectionInformations > div,
@@ -209,17 +176,16 @@ main {
 .sectionsStatistiques {
 	display: flex;
 	flex-direction: column;
-	gap: var(--gap-medium);
+	gap: var(--gap-small);
 }
 
-.PokemonInfos .sectionInformations .sectionType > div {
+.PokemonInfos .sectionType > div {
 	display: flex;
 	gap: var(--gap-medium);
 }
 
 /* Zf box */
 .containerColor {
-	margin: var(--margin-top-bottom-medium);
 	padding: var(--padding-medium);
 	background-color: var(--color-black-1);
 	border-radius: var(--border-radius-small);
@@ -233,7 +199,7 @@ main {
 	grid-template-rows: auto;
 }
 
-.PokemonInfos .sectionsStatistiques .team div {
+.PokemonInfos .sectionsStatistiques #team div {
 	display: flex;
 	padding: var(--padding-top-bottom-medium);
 	align-items: center;
@@ -244,7 +210,14 @@ main {
 	grid-column: 1/3;
 }
 
-/* Pokeball Circle */
+#zf #team .containerColor div {
+	padding: var(--padding-small);
+	display: flex;
+	gap: var(--gap-medium);
+	flex-wrap: wrap;
+}
+
+/* Icônes de pokéballs pour l'équipe */
 .circle {
 	background-color: var(--color-gray);
 	padding: var(--padding-small);
@@ -257,6 +230,43 @@ main {
 	background-color: var(--color-red-1);
 }
 
+/* Page d'erreur */
+#figurePokemonZf #Missingno {
+	height: 35rem;
+}
+
+/************** Alert Messages **************/
+
+/* Messages d'alertes, pour voir les autres transitions, voir line 548 */
+#alertMessage {
+	position: absolute;
+	display: flex;
+	align-items: center;
+	gap: var(--gap-small);
+	justify-content: center;
+	z-index: 20;
+	box-shadow: 0 0.2rem 0.5rem rgba(0, 0, 0, 0.1);
+	transition:
+		right 0.6s cubic-bezier(0.645, 0.045, 0.355, 1),
+		opacity 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+	top: 1rem;
+	right: -30rem;
+	margin-left: var(--margin-large);
+	padding: var(--padding-medium);
+	border-radius: var(--border-radius-small);
+	opacity: 0;
+}
+
+#alertMessage.popup {
+	right: 2rem;
+	opacity: 1;
+}
+
+#alertMessage.hide {
+	right: -30rem;
+	opacity: 0;
+}
+
 /************** Types pokemons **************/
 .typePokemon {
 	display: flex;
@@ -265,10 +275,6 @@ main {
 	border-radius: var(--border-radius-big);
 	align-items: center;
 	color: var(--color-white-only);
-}
-
-#zf .PokemonInfos .sectionInformations #typesPokemons {
-	padding: var(--padding-medium);
 }
 
 .typePokemon img,
@@ -281,8 +287,6 @@ main {
 }
 
 .typePokemon div {
-	height: 1.5rem;
-	width: 1.5rem;
 	display: flex;
 	align-items: center;
 }
@@ -355,10 +359,10 @@ main {
 
 /************** Figures **************/
 #figurePokemonZf {
+	display: flex;
 	position: relative;
 	justify-content: center;
 	align-items: center;
-	display: flex;
 }
 
 #figurePokemonZf #bgPokeball {
@@ -379,34 +383,35 @@ main {
 	z-index: 1;
 }
 
-/************** Section On bill **************/
+/************** Section Featured Pokemon **************/
 #pokemonPromoted {
 	position: relative;
 	overflow: hidden;
 	padding: var(--padding-top-bottom-large);
 }
-#pokemonPromoted header div {
+#pokemonPromoted #header div {
 	display: flex;
 	justify-content: space-between;
 	padding-bottom: var(--padding-small);
 }
 
-#pokemonPromoted header .subText {
+#pokemonPromoted #header .subText {
 	display: block;
 	padding: var(--padding-top-bottom-large);
 }
 
-/* Section Grid */
+/* Sections Grids */
 #pokemonPromoted #gridPokemon {
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr;
-	grid-template-rows: 1fr;
+	grid-template-rows: auto;
 	gap: var(--gap-medium);
 }
 
 #evolution #gridPokemon {
-	display: flex;
-	flex-direction: column;
+	display: grid;
+	grid-template-columns: 1fr;
+	grid-template-rows: auto 1fr 1fr;
 	gap: var(--gap-medium);
 	background-color: var(--color-black-1);
 	padding: var(--padding-medium);
@@ -424,12 +429,12 @@ main {
 	align-items: center;
 }
 
-/* Acticles On the bill */
+/* Pokémons à l'affiche */
 #pokemonPromoted #gridPokemon article {
 	background-color: var(--color-black-1);
 }
 
-/* Acticles Evolution */
+/* Pokémons évolutions */
 #evolution #gridPokemon article {
 	background-color: var(--color-black-2);
 }
@@ -446,7 +451,7 @@ main {
 }
 
 #gridPokemon article:hover {
-	transition: transform 0.1s ease-in-out;
+	transition: transform 0.2s ease-in-out;
 	transform: scale(1.01);
 }
 
@@ -464,22 +469,28 @@ main {
 }
 
 #gridPokemon article > div {
-	display: flex;
-	flex-direction: column;
+	display: grid;
+	grid-template-columns: auto min-content;
+	grid-template-rows: auto auto auto 1fr;
+	height: 100%;
 	gap: var(--gap-small);
-	padding: var(--padding-medium);
 }
 
-#gridPokemon article > div {
-	display: flex;
-	flex-direction: column;
-	gap: var(--gap-small);
-	padding: var(--padding-medium);
+#gridPokemon article > div span {
+	grid-column: 1/2;
+	grid-row: 2/3;
 }
 
-#gridPokemon article > div .cta {
-	margin-top: var(--margin-small);
-	align-self: flex-end;
+#gridPokemon article > div .flexTypes {
+	grid-column: 1/2;
+	grid-row: 3/4;
+	flex-wrap: wrap;
+}
+
+#gridPokemon article > div .btnArticle {
+	align-self: end;
+	grid-column: 2/3;
+	grid-row: 4/5;
 }
 
 /************** Footer **************/
@@ -500,9 +511,10 @@ main {
 #footerPage .secondaryContent {
 	display: flex;
 	align-items: center;
-	justify-content: space-between;
+	justify-content: flex-end;
 }
 
+/************** Animation start **************/
 /* Loader Wrapper (animation de https://lazyjinchuriki.github.io/) */
 .loaderWrapper {
 	display: flex;
@@ -571,8 +583,6 @@ main {
 @media (max-width: 1440px) {
 	#pokemonPromoted #gridPokemon {
 		grid-template-columns: 1fr 1fr;
-		grid-template-rows: auto;
-		gap: var(--gap-medium);
 	}
 }
 
@@ -582,9 +592,7 @@ main {
 		min-width: 0;
 	}
 	#zf .PokemonInfos .sectionInformations {
-		display: grid;
 		grid-template-columns: 1fr 1fr;
-		grid-template-rows: 1fr;
 	}
 
 	#zf .PokemonInfos .sectionInformations .sectionType {
@@ -593,17 +601,12 @@ main {
 	#zf .PokemonInfos .sectionCardNav {
 		flex-wrap: wrap;
 	}
-
-	#footerPage #primaryContent {
-		grid-template-columns: 1fr;
-		grid-template-rows: 1fr auto auto;
-		align-items: flex-start;
-	}
 }
 
 /* Media 992px small desktop */
 @media (max-width: 992px) {
 	#zf {
+		/* Change la disposition pour une seule ligne avec l'image au dessus */
 		grid-template-columns: 1fr;
 		grid-template-rows: 1fr 1fr;
 		width: 100%;
@@ -617,39 +620,39 @@ main {
 	}
 
 	#zf .PokemonInfos .sectionInformations {
-		grid-template-columns: 1fr 1fr 1fr;
+		grid-template-columns: 1fr 1fr 2fr;
 	}
 
 	#zf .PokemonInfos .sectionInformations .sectionType {
 		grid-column: 1/1;
 	}
 
-	#pokemonPromoted #gridPokemon img {
-		max-width: 60%;
-	}
-
-	#pokemonPromoted header {
+	#pokemonPromoted #header {
 		align-items: center;
 		text-align: center;
 		margin-bottom: var(--margin-medium);
 	}
 
-	#pokemonPromoted header > div {
-		flex-direction: column;
-	}
-	#pokemonPromoted header > div {
+	#pokemonPromoted #header > div {
 		flex-direction: column;
 	}
 
-	#pokemonPromoted header .spaceGap {
+	#pokemonPromoted #gridPokemon img {
+		max-width: 60%;
+	}
+
+	#pokemonPromoted #header .spaceGap {
 		justify-content: center;
-		flex-wrap: wrap;
-		gap: var(--gap-medium);
 	}
 
 	#pokemonPromoted #gridPokemon article {
 		grid-template-columns: 1fr;
-		grid-template-rows: 1fr auto;
+		gap: var(--gap-medium);
+		grid-template-rows: 1fr min-content;
+	}
+
+	#pokemonPromoted #gridPokemon article .btnArticle {
+		grid-column: 1/3;
 	}
 
 	#pokemonPromoted #gridPokemon article figure {
@@ -659,19 +662,19 @@ main {
 	}
 
 	#pokemonPromoted #gridPokemon article > div {
-		gap: var(--gap-medium);
+		grid-template-columns: 1fr 1fr;
 		padding: 0;
 	}
 
 	#pokemonPromoted #gridPokemon article .flexTypes {
+		grid-column: 2/3;
+		grid-row: 1/3;
 		display: grid;
-		grid-template-columns: min-content min-content;
+		justify-self: end;
+		grid-template-rows: min-content min-content;
 	}
 
-	#pokemonPromoted #gridPokemon article > div .cta {
-		grid-column: 1/3;
-	}
-
+	/* Changement de pokémon dans la page Équipe */
 	#zf #team {
 		order: -1;
 		border: none;
@@ -681,9 +684,17 @@ main {
 		display: none;
 	}
 
-	.PokemonInfos .sectionsStatistiques .team div {
+	#zf #team .containerColor div {
+		padding: 0;
 		display: flex;
+		gap: var(--gap-medium);
 		justify-content: center;
+	}
+
+	#footerPage #primaryContent {
+		grid-template-columns: 1fr;
+		grid-template-rows: 1fr auto auto;
+		align-items: flex-start;
 	}
 }
 
@@ -694,34 +705,38 @@ main {
 	}
 	#headerPage {
 		display: flex;
-		justify-content: center;
+		justify-content: space-between;
 	}
 	#pokemonPromoted #gridPokemon {
 		grid-template-columns: 1fr;
 	}
 
-	.PokemonInfos .sectionInformations {
+	#zf .PokemonInfos .sectionInformations {
 		grid-template-columns: 1fr 1fr;
 	}
 
-	.PokemonInfos .sectionInformations .sectionType {
-		grid-column: 1 / 3;
+	#zf .PokemonInfos .sectionInformations .sectionType {
+		grid-column: 1/3;
 	}
 
 	#figurePokemonZf #bgPokeball {
-		width: 40rem;
-		height: 40rem;
+		width: 45rem;
+		height: 45rem;
+	}
+
+	/* Page d'erreur */
+	#figurePokemonZf #Missingno {
+		height: 25rem;
 	}
 }
 
 /* Media 520px smartphone */
 @media (max-width: 520px) {
 	#zf {
-		grid-template-rows: 1fr auto;
+		grid-template-rows: auto 1fr;
 	}
-	.PokemonInfos .sectionsStatistiques .statistiques {
-		display: flex;
-		flex-direction: column;
+	.sectionCardNav div {
+		width: 100%;
 	}
 
 	.PokemonInfos .sectionCardNav .cta {
