--- a/CSS/style.css
+++ b/CSS/style.css
@@ -36,7 +36,7 @@
 
 /* Form Search */
 #search {
-	background-color: var(--color-black-1);
+	background-color: var(--color-black-2);
 	color: var(--color-white-only);
 }
 
@@ -131,7 +131,7 @@ input #darkLightMode {
 }
 
 .circle:not(.circleActive):not(.activeHover) {
-background-color: var(--color-black-2);
+	background-color: var(--color-black-2);
 }
 
 .circleActive,
@@ -480,7 +480,7 @@ background-color: var(--color-black-2);
 	gap: var(--gap-small);
 }
 
-#gridPokemon article > div span {
+#gridPokemon article > div span:not(.subText) {
 	grid-column: 1/2;
 	grid-row: 2/3;
 }
@@ -516,6 +516,12 @@ background-color: var(--color-black-2);
 	display: flex;
 	align-items: center;
 	justify-content: flex-end;
+}
+
+ul {
+	display: flex;
+	flex-direction: column;
+	gap: var(--gap-small);
 }
 
 /************** Animation start **************/
