--- a/CSS/light-mode.css
+++ b/CSS/light-mode.css
@@ -43,18 +43,18 @@
 	--color-plante: #0a7f49;
 	--color-electric: #d1aa0a;
 	--color-glace: #4a5df2;
-	--color-combat: #bb6707;
+	--color-combat: #A75C06;
 	--color-poison: #923fcc;
 
 	--color-sol: #915121;
-	--color-vol: #6171ff;
+	--color-vol: #4D5EFF;
 	--color-psy: #de1256;
 	--color-insecte: #6b770d;
 
 	--color-roche: #7a734d;
 	--color-spectre: #704170;
-	--color-dragon: #475aff;
+	--color-dragon: #2b39b4;
 	--color-tenebre: #50413f;
 	--color-acier: #3e798e;
-	--color-fee: #c115c1;
+	--color-fee: #C115C1;
 }
